tweaks to css for date/time layout issues. Remove call home from js

--- a/plugins/jojo_core/external/anytime/anytimec.css
+++ b/plugins/jojo_core/external/anytime/anytimec.css
@@ -11,13 +11,13 @@ San Francisco, California, 94105, USA.  For ported versions of the
 license, visit http://creativecommons.org/international/
 Any+Time is a trademark of Andrew M. Andrews III. */
 .AnyTime-pkr * {border:0;font: inherit;font-size: x-small;font-style:normal;font-weight:normal;list-style-type:none;margin:0;padding:0;white-space: nowrap}
-div.AnyTime-win {background-color:#F0F0F1;border:3px solid #C0C0C0;font:normal normal normal xx-small/normal sans-serif;padding-bottom:0.2em;-moz-border-radius:6px;-webkit-border-radius:6px}
+div.AnyTime-win {background-color:#F0F0F1;border:3px solid #C0C0C0;font:normal normal normal xx-small/normal sans-serif;padding-bottom:1em;-moz-border-radius:6px;-webkit-border-radius:6px}
 .AnyTime-pkr .AnyTime-cloak {background-color:#D7D7D7;opacity:0.7;filter:alpha(opacity=70)}
 .AnyTime-pkr .AnyTime-hdr {background-color:#D0D0D1;color:#606062;font-family:Arial,Helvetica,sans-serif;font-size:medium;font-weight:normal;height:1em;margin:0;padding:0 0 0.4em 0;text-align:center;-moz-border-radius:2px;-webkit-border-radius:2px}
 .AnyTime-pkr .AnyTime-x-btn {background-color:#FCFCFF;border:1px solid #F99;color:#FF9F9F;cursor:default;float:right;margin:0.3em;text-align:center;width:1.5em;-moz-border-radius:0.4em;-webkit-border-radius:0.4em}
 .AnyTime-pkr .AnyTime-btn {background-color:#FCFCFE;border:1px solid #999;color:#606062;cursor:default;float:left;font-family:Arial,Helvetica,sans-serif;height:1.5em;margin-bottom:1px;margin-right:1px;padding-top:0.1em;-moz-border-radius:0.4em;-webkit-border-radius:0.4em}
-.AnyTime-pkr .AnyTime-body {padding:0.5em}
-.AnyTime-pkr .AnyTime-date {float:left;padding:0 0.5em}
+.AnyTime-pkr .AnyTime-body {padding:0.4em}
+.AnyTime-pkr .AnyTime-date {float:left;}
 .AnyTime-pkr .AnyTime-lbl {clear:left;color:#606063;font-family:Arial,Helvetica,sans-serif;font-size:100%;font-weight:normal;font-style:normal;height:1.3em;margin:0;padding:0;text-align:center}
 .AnyTime-pkr .AnyTime-yrs {height:2.6em;text-align:center;width:18.6em}
 .AnyTime-pkr .AnyTime-yrs-past-btn {width:2.7em}
@@ -30,7 +30,7 @@ div.AnyTime-win {background-color:#F0F0F1;border:3px solid #C0C0C0;font:normal n
 .AnyTime-pkr th.AnyTime-dow {background-color:#C0C0C1;color:white;font-family:Arial,Helvetica,sans-serif;font-size:95%;font-weight:normal;font-style:normal}
 .AnyTime-pkr .AnyTime-dom-btn {float:none;height:1.7em;text-align:right;padding:0 0.5em 0 0}
 .AnyTime-pkr .AnyTime-dom-btn-empty {background-color:#F3F3F4;border:1px solid #C0C0c1}
-.AnyTime-pkr .AnyTime-time {float:left;padding:0 0 0 1em;text-align:center}
+.AnyTime-pkr .AnyTime-time {float:left;text-align:center}
 .AnyTime-pkr .AnyTime-hrs {float:left;padding-left:0.5em;padding-right:0.5em;text-align:center;width:7.2em}
 .AnyTime-pkr .AnyTime-hrs-am, .AnyTime-pkr .AnyTime-hrs-pm {float:left;width:3.6em}
 .AnyTime-pkr .AnyTime-hr-btn {text-align:right;padding-right:0.25em;width:3em; }
